--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-logging.level.root=INFO
+logging.level.root=error
 
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 
