--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8081
 
 logging.level.root=error
 
@@ -10,5 +10,5 @@ spring.datasource.username=root
 spring.datasource.password=2000
 
 # mybatis
-mybatis.mapperLocations=classpath:mapper/*.xml
+mybatis.mapper-locations=classpath*:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
