--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,33 @@
 spring:
+  #邮箱配置
   mail:
     host: smtp.163.com
+    from: wq13120731020@163.com
+    # 使用自己的发送方用户名 + 授权码填充
     username: wq13120731020@163.com
-    password: Wq1364554,.
-    port: 25
+    password: ETLCKLUJBIBLZUUG
+    default-encoding: UTF-8
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+    username: root
+    password: 2000
 
 
+  thymeleaf:
+    mode: HTML
+    encoding: UTF-8
+    servlet:
+      content-type: text/html
+    cache: false
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.git.hui.demo.report.dao.po
